# psyche_simulacra

./: .env.example  .gitignore  Analisis.txt  FAQ.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt  start_overnight.bat
.claude/: settings.local.json
core/: simulation.py
core/agents/: __init__.py  agent.py  agent_core.py  needs.py  (+1 more)
data/: sim_id.txt
docs/: Liminal_Zone.md  roadmap6.md  simulacion_final.md
liminal_server/: FAQ.md  README.md  config.py  main.py  requirements.txt
obsidian/: reader.py  sync.py  writer.py
persistence/: __init__.py  checkpoint.py  database.py  session_log.py  write_buffer.py
psyche_simulacra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: eval_culture.py  generate_personas.py  plot_emergence.py  run_overnight.py  run_robustness.py  run_simulation.py  visualizer.py
src/: 00-PSYCHE_SIMULACRA_ROADMAP.md  01-PSYCHE_IDEAS_IMPLEMENTACION.md  02-PSYCHE_ORIGEN_INCONSCIENTE.md  03-PSYCHE_BETA_SCOPE.md  04-PSYCHE_SISTEMA_VIDA.md  05-PSYCHE_LECCIONES_SIMULACIONES.md  06-PSYCHE_ESCENARIO_INICIAL.md  07-PSYCHE_AUDITORIA_PERSISTENCIA.md  08-PSYCHE_EL_MUNDO.md  09-PSYCHE_ARQUITECTURA_NUCLEOS.md  10-PSYCHE_SIMULATION_CLOCK.md  11-PSYCHE_BITACORA_BUGS.md  12-ARQUITECTURA_EVOLUTION.md  13-PSYCHE_BIBLIOGRAFIA.md  ARQUITECTURA_EVOLUTION.md  ROADMAP2.md  Roadmap4.md  Roadmap5.md  roadmap6.md  roadmap7.md
tests/: test_agent.py  test_bug_fixes.py  test_culture_r7.py  test_evolution.py  test_metrics.py  test_network.py  test_obsidian.py  test_persistence.py  test_quantum.py  test_reproducibility.py  test_simulation.py  test_social.py  test_ui_figures.py
ui/: app_state.py  db_reader.py  launch.py  psyche_ui.py
(+4318 files in other folders)
