[project]
name = "psyche-simulacra"
version = "0.1.0"
description = "Simulación de emergencia del inconsciente colectivo"
requires-python = ">=3.11"

dependencies = [
    "mesa>=2.4",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "pygame>=2.5.0",
    "plotly>=5.0",
    "nicegui>=2.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35", "matplotlib>=3.8", "pandas>=2.0"]
liminal = ["aiohttp>=3.9", "websockets>=12.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "persistence*", "obsidian*", "dashboard*", "ui*", "liminal_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
